--- a/resources/index.css
+++ b/resources/index.css
@@ -1,121 +1,488 @@
-
-
-portfolio_block {
-    display: inline-flexbox
+/* Imports  */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+/* font-family: 'Roboto', sans-serif; */
+/* general */
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	text-decoration: none;
+	font-family: "Roboto", sans-serif;
+}
+html {
+	font-size: 62.5%;
+	scroll-behavior: smooth;
+}
+button {
+	background-color: #3882f6;
+	color: white;
+	padding: 15px;
+	font-size: 15px;
+	border-top-right-radius: 23px;
+	border-bottom-left-radius: 20px;
+	border: none;
+	box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.5);
+	transition: all 200ms;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background: pink;
-    width: hidden;
-    overflow: hidden;
+button:hover {
+	background-color: #2469da;
+	cursor: pointer;
+}
+/* end general */
+/*************************************************************/
+/************************** navigation ***********************/
+/*************************************************************/
+
+header {
+	background: #1f2937;
+	position: fixed;
+	width: 100%;
+	z-index: 100;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 2rem 12rem;
 }
 
-li, a {
-    display: block;
-    text-align: center;
+.logo-container a {
+	color: #f9faf8;
+	font-size: 2.4rem;
+	font-weight: bold;
+}
+
+.anchor-container {
+	gap: 2.4rem;
+	padding-right: 2.4rem;
+}
+.anchor-container a {
+	text-decoration: none;
+	color: #e5e7eb;
+	font-size: 1.8rem;
+	position: relative;
+}
+.current-page {
+	font-weight: bold;
+	font-size: 2rem;
+	pointer-events: none;
+}
+
+.anchor-container a:hover {
+	color: #3882f6;
+}
+.anchor-container a::after {
+	content: "";
+	width: 0;
+	height: 2px;
+	position: absolute;
+	background-color: #e5e7eb;
+	left: 0;
+	bottom: -1px;
+	transition: all 300ms;
+}
+.anchor-container a:hover::after {
+	width: 100%;
+	background-color: #3882f6;
 }
 
 body {
-    font-family: "Century Gothic", 'Lato', sans-serif;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  .et-hero-tabs,
-  .et-slide {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    position: relative;
-    background: #eee;
-    text-align: center;
-    padding: 0 2em;
-  }
-  
-  .et-hero-tabs h1 {
-    font-size: 2rem;
-    margin: 0;
-    letter-spacing: 1rem;
-  }
-  
-  .et-hero-tabs h3 {
-    font-size: 1rem;
-    letter-spacing: 0.3rem;
-    opacity: 0.6;
-  }
-  
-  .et-hero-tabs-container {
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 70px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    background: #fff;
-    z-index: 10;
-  }
-  
-  .et-hero-tabs-container--top {
-    position: fixed;
-    top: 0;
-  }
-  
-  .et-hero-tab {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
-    color: #000;
-    letter-spacing: 0.1rem;
-    transition: all 0.5s ease;
-    font-size: 0.8rem;
-  }
-  
-  .et-hero-tab:hover {
-    color: white;
-    background: rgba(102, 177, 241, 0.8);
-    transition: all 0.5s ease;
-  }
-  
-  .et-hero-tab-slider {
-    position: absolute;
-    bottom: 0;
-    width: 0;
-    height: 6px;
-    background: #66b1f1;
-    transition: left 0.3s ease;
-  }
-  
-  @media (min-width: 800px) {
-    .et-hero-tabs h1 {
-      font-size: 3rem;
-    }
-  
-    .et-hero-tabs h3 {
-      font-size: 1rem;
-    }
-  
-    .et-hero-tab {
-      font-size: 1rem;
-    }
-  }
-  
-  #tab-es6 {
-    background-image: url('./resources/Picture 1.jpeg');
-    background-size: cover;
-    background-position: center;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+	font-family: "Roboto", sans-serif;
+}
+
+main {
+	padding: 150px 30px 50px 90px;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+		url(../images/brussels/navimage.jpg);
+	background-size: cover;
+	background-position: center;
+	/* opacity: 0.8; */
+}
+h1 {
+	color: white;
+	font-size: 50px;
+}
+main h3 {
+	margin: 10px 0 25px 0;
+	color: white;
+	font-size: 20px;
+	font-weight: normal;
+}
+
+h2 {
+	padding: 50px;
+	text-align: center;
+	font-size: 50px;
+	color: white;
+}
+/* places to visit  */
+.places {
+	background-color: rgb(31 41 55 / 89%);
+}
+.card-container {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	margin-top: 10px;
+}
+.card {
+	width: 400px;
+	background-color: #e5e4e2;
+	border-radius: 8px;
+	overflow: hidden;
+	box-shadow: 0px 2px 9px 9px rgba(0, 0, 0, 0.2);
+	margin: 20px;
+	transition: transform 0.3s ease;
+}
+.card:hover {
+	transform: translateY(-15px);
+}
+.card img {
+	width: 100%;
+	height: auto;
+}
+.card-content {
+	padding: 16px;
+}
+.card-content h3 {
+	font-size: 28px;
+	margin-bottom: 8px;
+	text-align: center;
+}
+.card-content p {
+	font-size: 15px;
+	line-height: 1.3;
+	padding-bottom: 12px;
+}
+.card-content button {
+	display: block;
+	margin: auto;
+	border-radius: 0;
+}
+/* end places  */
+/* reasons section */
+.reasons-section {
+	padding-top: 100px;
+	background-color: #e5e4e2;
+	padding-bottom: 50px;
+}
+.content {
+	margin-left: 100px;
+	padding-right: 25px;
+	display: block;
+	padding-bottom: 20px;
+}
+.content h3 {
+	font-size: 50px;
+	margin-bottom: 20px;
+	color: #1f2937;
+}
+.content p {
+	font-size: 25px;
+}
+.reasons-section img {
+	width: 50%;
+	height: auto;
+	display: block;
+	margin: 0 auto;
+	box-shadow: 7px 12px 36px 14px black;
+}
+/* reasons end  */
+.testimony {
+	padding-top: 30px;
+	padding-bottom: 50px;
+	background-color: #1f2937;
+}
+.testimony-content {
+	margin: auto;
+	width: 70%;
+}
+.testimony-content i {
+	font-size: 150px;
+	color: #e5e7eb;
+}
+.testimony-person img {
+	width: 30%;
+	height: auto;
+	margin-left: 52px;
+	clip-path: circle(35% at 40% 50%);
+	object-fit: cover;
+}
+.person-info {
+	padding-left: 30px;
+}
+.person-info h3 {
+	color: #e5e7eb;
+	font-size: 36px;
+}
+.person-info h5 {
+	font-size: 25px;
+	padding-bottom: 20px;
+}
+.testimony-text h4 {
+	font-size: 20px;
+	font-style: italic;
+	color: #2469da;
+}
+.testimony-text p {
+	font-size: 18px;
+	color: #e5e4e2;
+	padding-top: 5px;
+}
+/*************************************************************/
+/**************************** footer *************************/
+/*************************************************************/
+
+.flex-center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.flex-column {
+	flex-direction: column;
+}
+.icon {
+	font-size: 2.8rem;
+	color: #e5e7fb;
+}
+.icon:hover {
+	color: #3882f6;
+}
+footer {
+	background: #1f2937;
+	color: #e5e7fb;
+}
+footer p {
+	font-size: 15px;
+}
+
+footer div {
+	gap: 1.2rem;
+	margin-top: 1.2rem;
+	padding: 1.2rem 0;
+}
+
+@media screen and (min-width: 600px) {
+	.testimony-content {
+		display: flex;
+		margin: auto;
+		width: 70%;
+	}
+}
+@media screen and (min-width: 992px) {
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+		text-decoration: none;
+		font-family: "Roboto", sans-serif;
+	}
+	html {
+		font-size: 62.5%;
+		scroll-behavior: smooth;
+	}
+
+	button {
+		background-color: #3882f6;
+		color: white;
+		padding: 15px;
+		font-size: 15px;
+		border-top-right-radius: 23px;
+		border-bottom-left-radius: 20px;
+		border: none;
+		box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.5);
+		transition: all 200ms;
+	}
+
+	button:hover {
+		background-color: #2469da;
+		cursor: pointer;
+	}
+	/* end general */
+	body {
+		font-family: "Roboto", sans-serif;
+	}
+
+	main {
+		padding: 250px 130px 150px 130px;
+		background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+			url(../images/brussels/navimage.jpg);
+		background-size: cover;
+		background-position: center;
+		/* opacity: 0.8; */
+	}
+	h1 {
+		color: white;
+		font-size: 50px;
+	}
+	main h3 {
+		width: 40%;
+		margin: 10px 0 25px 0;
+		color: white;
+		font-size: 20px;
+		font-weight: normal;
+	}
+
+	h2 {
+		padding: 50px;
+		text-align: center;
+		font-size: 50px;
+		color: white;
+	}
+	/* places to visit  */
+	.places {
+		background-color: rgb(31 41 55 / 89%);
+	}
+	.card-container {
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
+		margin-top: 10px;
+	}
+	.card {
+		width: 400px;
+		background-color: #e5e4e2;
+		border-radius: 8px;
+		overflow: hidden;
+		box-shadow: 0px 2px 9px 9px rgba(0, 0, 0, 0.2);
+		margin: 20px;
+		transition: transform 0.3s ease;
+	}
+	.card:hover {
+		transform: translateY(-15px);
+	}
+	.card img {
+		width: 100%;
+		height: auto;
+	}
+	.card-content {
+		padding: 16px;
+	}
+
+	/* end places  */
+	/* reasons section */
+	.reasons-section {
+		display: flex;
+		padding-top: 100px;
+		background-color: #e5e4e2;
+	}
+	.content {
+		margin-left: 200px;
+		padding-right: 25px;
+		display: block;
+	}
+	.content h3 {
+		font-size: 50px;
+		margin-bottom: 20px;
+		color: #1f2937;
+	}
+	.content p {
+		font-size: 25px;
+	}
+	.reasons-section img {
+		width: 30%;
+		height: auto;
+		margin: 0px 200px 30px 0px;
+		box-shadow: 7px 12px 36px 14px black;
+	}
+	/* reasons end  */
+	.testimony {
+		padding-top: 30px;
+		padding-bottom: 50px;
+		background-color: #1f2937;
+	}
+	.testimony-content {
+		display: flex;
+		margin: auto;
+		width: 70%;
+	}
+	.testimony-content i {
+		font-size: 150px;
+		color: #e5e7eb;
+	}
+	.testimony-person {
+		display: flex;
+	}
+	.testimony-person img {
+		width: 30%;
+		height: auto;
+		margin-left: 52px;
+		clip-path: circle(35% at 40% 50%);
+		object-fit: cover;
+	}
+	.person-info {
+		padding-left: 30px;
+	}
+	.person-info h3 {
+		color: #e5e7eb;
+		font-size: 36px;
+	}
+	.person-info h5 {
+		font-size: 25px;
+		padding-bottom: 20px;
+	}
+	.testimony-text h4 {
+		font-size: 20px;
+		font-style: italic;
+		color: #2469da;
+	}
+	.testimony-text p {
+		font-size: 18px;
+		color: #e5e4e2;
+		padding-top: 5px;
+	}
+	/*************************************************************/
+	/**************************** footer *************************/
+	/*************************************************************/
+
+	.flex-center {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.flex-column {
+		flex-direction: column;
+	}
+	.icon {
+		font-size: 1.8rem;
+		color: #e5e7fb;
+	}
+	.icon:hover {
+		color: #3882f6;
+	}
+	footer {
+		background: #1f2937;
+		color: #e5e7fb;
+	}
+	footer p {
+		font-size: 15px;
+	}
+
+	footer div {
+		gap: 1.2rem;
+		margin-top: 1.2rem;
+		padding: 1.2rem 0;
+	}
+}
+@media (max-width: 768px) {
+	header {
+		margin: 0;
+		justify-content: center;
+		flex-direction: column;
+		padding-top: 1.2rem;
+		gap: 1.2rem;
+	}
+	.anchor-container {
+		padding-right: 0;
+	}
+	.logo-container a {
+		font-size: 1.8rem;
+	}
+	.anchor-container a {
+		font-size: 1.2rem;
+	}
+	.anchor-container a.current-page {
+		font-size: 1.6rem;
+	}
+}
